tests/fail/assert_fail3.avm
push int8(0)
push float(0.0)
assert float(0.0)
assert double(0.0)
